Landing page completed

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Portfolio Web site of Radhakrishnan Kanagaraj"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
